--- a/Style-files/style.css
+++ b/Style-files/style.css
@@ -23,11 +23,21 @@
 }
 
 #calcprocent {
+
+    height: 20px;
+    width: 100px;
+    margin-left: 38px;
     background-color: darkseagreen;
 }
 
 #calctotal {
+
+
+    height: 20px;
+    width: 100px;
+    margin-left: 95px;
     background-color: darkseagreen;
+
 }
 
 #total{
@@ -50,4 +60,19 @@
     /*padding: 10px;*/
     display: flex;
     flex-direction: row;
+}
+#bill {
+
+    height: 20px;
+    width: 100px;
+    margin-left: 35px;
+
+}
+
+#procent {
+
+    height: 20px;
+    width: 100px;
+    margin-left: 17px;
+
 }
